@@ -21,6 +21,7 @@ X11LIBS= -lX11 -lXext	# can remove or override using env section in config files
 OBJ=\
 	asm-$OBJTYPE.$O\
 	os.$O\
+	kproc-pthreads.$O\
 	segflush-$OBJTYPE.$O\
 	$CONF.root.$O\
 	lock.$O\
@@ -33,7 +34,7 @@ LIBNAMES=${LIBS:%=lib%.a}
 HFILES=\
 
 CFLAGS='-DROOT="'$ROOT'"' -DEMU -I. -I../port -I$ROOT/$SYSTARG/$OBJTYPE/include -I$ROOT/include -I$ROOT/libinterp $CTHREADFLAGS $CFLAGS $EMUOPTIONS
-SYSLIBS= $X11LIBS -lm -lrt -lpthread
+SYSLIBS= $X11LIBS -lm -lpthread
 KERNDATE=`{$NDATE}
 
 default:V:	$O.$CONF
